# fastapi-anime

./: pyproject.toml
src/: config.yaml
src/animeapi/: database.py  init.py  log_middleware.py  main.py  template.py
src/animeapi/plugins/manager/: main.py
src/animeapi/routes/: anime.py  auth.py  manager.py
src/templates/: anime_list.html  home.html  register.html  tmp.html
