[tool.poetry]
name = "animeapi"
version = "0.1.0"
description = ""
authors = ["yumubi <shaman2077c@163.com>"]
readme = "README.md"
packages = [{include = "animeapi", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
jinja2 = "^3.1.4"
fastapi = "^0.111.0"
asyncpg = "^0.29.0"
passlib = "^1.7.4"
pyyaml = "^6.0.1"
python-multipart = "^0.0.9"
asyncio = "^3.4.3"
bcrypt = "4.0.1"
itsdangerous = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
